--- a/myspring/pom.xml
+++ b/myspring/pom.xml
@@ -19,6 +19,8 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <java.version>1.8</java.version>
+    <slf4j.version>1.7.24</slf4j.version>
+    <logback.version>1.1.7</logback.version>
   </properties>
 
   <dependencies>
@@ -29,87 +31,52 @@
     </dependency>
     
     <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-jdbc</artifactId>
-    </dependency>
-    
-    <dependency>
-      <groupId>com.h2database</groupId>
-      <artifactId>h2</artifactId>
-    </dependency>
-    
-    <dependency>
-	    <groupId>org.mybatis</groupId>
-	    <artifactId>mybatis</artifactId>
-	    <version>3.4.4</version>
-	</dependency>
-    
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-thymeleaf</artifactId>
-    </dependency>
-    
-    <dependency>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-test</artifactId>
 		<scope>test</scope>
 	</dependency>
 	
-	<dependency>
-	    <groupId>org.apache.storm</groupId>
-	    <artifactId>storm-core</artifactId>
-	    <version>1.1.0</version>
-	    <scope>provided</scope>
-	</dependency>
-
-    
-    <dependency>  
-        <groupId>org.apache.shiro</groupId>  
-        <artifactId>shiro-core</artifactId>  
-        <version>1.2.2</version>  
-    </dependency> 
-  
-	<dependency>
-	    <groupId>org.javatuples</groupId>
-	    <artifactId>javatuples</artifactId>
-	    <version>1.2</version>
-	</dependency>
-	
+	<!-- Junit -->
     <dependency>
-        <groupId>org.apache.commons</groupId>
-        <artifactId>commons-email</artifactId>
-        <version>1.4</version>
+        <groupId>junit</groupId>
+        <artifactId>junit</artifactId>
+        <version>4.12</version>
+    </dependency>
+    <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-test</artifactId>
+        <version>1.4.2.RELEASE</version>
+        <scope>test</scope>
     </dependency>
 	
-	<dependency>
+	
+	
+	<!-- log -->
+    <dependency>
+        <groupId>ch.qos.logback</groupId>
+        <artifactId>logback-classic</artifactId>
+        <version>${logback.version}</version>
+    </dependency>
+    <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-api</artifactId>
+        <version>${slf4j.version}</version>
+    </dependency>
+    
+    <dependency>
 	    <groupId>org.apache.commons</groupId>
 	    <artifactId>commons-lang3</artifactId>
 	    <version>3.6</version>
 	</dependency>
-	
-	<!-- https://mvnrepository.com/artifact/redis.clients/jedis -->
-	<dependency>
-	    <groupId>redis.clients</groupId>
-	    <artifactId>jedis</artifactId>
-	    <version>2.9.0</version>
-	</dependency>
-	
-	<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
-	<dependency>
-	    <groupId>com.google.code.gson</groupId>
-	    <artifactId>gson</artifactId>
-	    <version>2.8.0</version>
-	</dependency>
     
   </dependencies>
   
-  <build>
+  	<build>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
-            
 		</plugins>
 	</build>
   
