--- a/mytest/src/main/resources/myshiro/auth-jdbc-realm.ini
+++ b/mytest/src/main/resources/myshiro/auth-jdbc-realm.ini
@@ -2,7 +2,7 @@
 jdbcRealm=org.apache.shiro.realm.jdbc.JdbcRealm
 dataSource=com.alibaba.druid.pool.DruidDataSource
 dataSource.driverClassName=com.mysql.jdbc.Driver
-dataSource.url=jdbc:mysql://172.25.3.195:3306/test
+dataSource.url=jdbc:mysql://localhost:3306/test
 dataSource.username=root
 dataSource.password=123456
 jdbcRealm.dataSource=$dataSource
