--- a/mytest/src/main/resources/myshiro/auth-jdbc-passwordservice.ini
+++ b/mytest/src/main/resources/myshiro/auth-jdbc-passwordservice.ini
@@ -1,4 +1,5 @@
 [main]
+myRealm=myshiro.chapter05.realm.MyRealm
 
 passwordService=org.apache.shiro.authc.credential.DefaultPasswordService
 hashService=org.apache.shiro.crypto.hash.DefaultHashService
@@ -11,7 +12,15 @@ passwordService.hashFormatFactory=$hashFormatFactory
 passwordMatcher=org.apache.shiro.authc.credential.PasswordMatcher
 passwordMatcher.passwordService=$passwordService
 
-myRealm=myshiro.chapter05.realm.MyRealm
-myRealm.passwordService=$passwordService
-myRealm.credentialsMatcher=$passwordMatcher
-securityManager.realms=$myRealm
+dataSource=com.alibaba.druid.pool.DruidDataSource
+dataSource.driverClassName=com.mysql.jdbc.Driver
+dataSource.url=jdbc:mysql://172.25.3.195:3306/test
+dataSource.username=root
+dataSource.password=123456
+
+jdbcRealm=org.apache.shiro.realm.jdbc.JdbcRealm
+jdbcRealm.dataSource=$dataSource
+jdbcRealm.permissionsLookupEnabled=true
+
+jdbcRealm.credentialsMatcher=$passwordMatcher
+securityManager.realms=$jdbcRealm
