--- a/mytest/pom.xml
+++ b/mytest/pom.xml
@@ -127,6 +127,12 @@
         <version>1.7.24</version>
     </dependency>
     
+    <dependency>
+        <groupId>net.sf.ehcache</groupId>
+        <artifactId>ehcache-core</artifactId>
+        <version>2.6.6</version>
+    </dependency>
+    
   </dependencies>
   
   <build>
