--- a/mytest/pom.xml
+++ b/mytest/pom.xml
@@ -23,6 +23,26 @@
 
   <dependencies>
   
+  <dependency>  
+    <groupId>com.fasterxml.jackson.dataformat</groupId>  
+    <artifactId>jackson-dataformat-xml</artifactId>  
+    <version>2.5.3</version>  
+</dependency>  
+  
+<dependency>  
+    <groupId>org.codehaus.jackson</groupId>  
+    <artifactId>jackson-mapper-asl</artifactId>  
+    <version>1.9.13</version>  
+</dependency>
+  
+  <!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
+<dependency>
+    <groupId>org.apache.httpcomponents</groupId>
+    <artifactId>httpclient</artifactId>
+    <version>4.5.3</version>
+</dependency>
+  
+  
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
