--- a/myquartz/spring-quartz/pom.xml
+++ b/myquartz/spring-quartz/pom.xml
@@ -102,8 +102,14 @@
 	<dependency>
 		<groupId>mysql</groupId>
 		<artifactId>mysql-connector-java</artifactId>
-		<version>5.1.31</version>
+		<version>5.1.44</version>
 	</dependency>
+	
+	<dependency>
+          <groupId>com.alibaba</groupId>
+          <artifactId>druid</artifactId>
+          <version>0.2.23</version>
+      </dependency>
 	
 	<!-- https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api -->
 	<dependency>
