--- a/myquartz/spring-quartz/src/main/resources/quartz.properties
+++ b/myquartz/spring-quartz/src/main/resources/quartz.properties
@@ -27,7 +27,7 @@ org.quartz.jobStore.misfireThreshold: 60000
  
 #default config
 #org.quartz.jobStore.class: org.quartz.simpl.RAMJobStore
-#\u6301\u4e45\u5316\u914d\u7f6e
+#\u6301\u4E45\u5316
 org.quartz.jobStore.class:org.quartz.impl.jdbcjobstore.JobStoreTX
 org.quartz.jobStore.driverDelegateClass:org.quartz.impl.jdbcjobstore.StdJDBCDelegate
 org.quartz.jobStore.useProperties:true
@@ -46,7 +46,7 @@ org.quartz.jobStore.dataSource:qzDS
 #============================================================================
 #JDBC\u9a71\u52a8
 org.quartz.dataSource.qzDS.driver:com.mysql.jdbc.Driver
-org.quartz.dataSource.qzDS.URL:jdbc:mysql://localhost:3306/quartz_test
+org.quartz.dataSource.qzDS.URL:jdbc:mysql://192.168.0.106:3306/quartz_test
 org.quartz.dataSource.qzDS.user:root
-org.quartz.dataSource.qzDS.password:root
+org.quartz.dataSource.qzDS.password:123456
 org.quartz.dataSource.qzDS.maxConnection:10
