--- a/mpwb/src/main/resources/application-dev.properties
+++ b/mpwb/src/main/resources/application-dev.properties
@@ -7,3 +7,5 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 server.port=80
 logging.config=classpath:logback-dev.xml
+
+test.url=http://localhost:80
