--- a/myshiro/sr-ch03/src/main/resources/shiro-jdbc-authorizer.ini
+++ b/myshiro/sr-ch03/src/main/resources/shiro-jdbc-authorizer.ini
@@ -1,23 +1,23 @@
 [main]
-#è‡ªå®šä¹‰authorizer
+#×Ô¶¨Òåauthorizer
 authorizer=org.apache.shiro.authz.ModularRealmAuthorizer
-#è‡ªå®šä¹‰permissionResolver
+#×Ô¶¨ÒåpermissionResolver
 #permissionResolver=org.apache.shiro.authz.permission.WildcardPermissionResolver
-permissionResolver=com.github.zhangkaitao.shiro.chapter3.permission.BitAndWildPermissionResolver
+permissionResolver=cn.cc.test.shiro.permission.BitAndWildPermissionResolver
 authorizer.permissionResolver=$permissionResolver
-#è‡ªå®šä¹‰rolePermissionResolver
-rolePermissionResolver=com.github.zhangkaitao.shiro.chapter3.permission.MyRolePermissionResolver
+#×Ô¶¨ÒårolePermissionResolver
+rolePermissionResolver=cn.cc.test.shiro.permission.MyRolePermissionResolver
 authorizer.rolePermissionResolver=$rolePermissionResolver
 
 securityManager.authorizer=$authorizer
 
-#è‡ªå®šä¹‰realm ä¸€å®šè¦æ”¾åœ¨securityManager.authorizerèµ‹å€¼ä¹‹åï¼ˆå› ä¸ºè°ƒç”¨setRealmsä¼šå°†realmsè®¾ç½®ç»™authorizerï¼Œå¹¶ç»™å„ä¸ªRealmè®¾ç½®permissionResolverå’ŒrolePermissionResolverï¼‰
+#×Ô¶¨Òårealm Ò»¶¨Òª·ÅÔÚsecurityManager.authorizer¸³ÖµÖ®ºó£¨ÒòÎªµ÷ÓÃsetRealms»á½«realmsÉèÖÃ¸øauthorizer£¬²¢¸ø¸÷¸öRealmÉèÖÃpermissionResolverºÍrolePermissionResolver£©
 jdbcRealm=org.apache.shiro.realm.jdbc.JdbcRealm
 dataSource=com.alibaba.druid.pool.DruidDataSource
 dataSource.driverClassName=com.mysql.jdbc.Driver
 dataSource.url=jdbc:mysql://localhost:3306/shiro
 dataSource.username=root
-#dataSource.password=
+dataSource.password=123456
 jdbcRealm.dataSource=$dataSource
 jdbcRealm.permissionsLookupEnabled=true
 securityManager.realms=$jdbcRealm
