--- a/myshiro/sr-ch03/src/main/resources/shiro-permission.ini
+++ b/myshiro/sr-ch03/src/main/resources/shiro-permission.ini
@@ -5,42 +5,42 @@ li=123,role41,role42,role51,role52,role53,role61,role62,role71,role72,role73,rol
 
 
 [roles]
-#å¯¹èµ„æºuseræ‹¥æœ‰createã€updateæƒé™
+#¶Ô×ÊÔ´userÓµÓĞcreate¡¢updateÈ¨ÏŞ
 role1=user:create,user:update
-#å¯¹èµ„æºuseræ‹¥æœ‰createã€deleteæƒé™
+#¶Ô×ÊÔ´userÓµÓĞcreate¡¢deleteÈ¨ÏŞ
 role2=user:create,user:delete
-#å¯¹èµ„æºuseræ‹¥æœ‰createæƒé™
+#¶Ô×ÊÔ´userÓµÓĞcreateÈ¨ÏŞ
 role3=system:user:create
 
-#å¯¹èµ„æºuseræ‹¥æœ‰updateã€deleteæƒé™
+#¶Ô×ÊÔ´userÓµÓĞupdate¡¢deleteÈ¨ÏŞ
 role41=system:user:update,system:user:delete
-#å¯¹èµ„æºuseræ‹¥æœ‰updateã€deleteæƒé™ï¼ˆç®€å†™ï¼Œä½†ä¸ç­‰ä»·ï¼‰
+#¶Ô×ÊÔ´userÓµÓĞupdate¡¢deleteÈ¨ÏŞ£¨¼òĞ´£¬µ«²»µÈ¼Û£©
 role42="system:user:update,delete"
 
-#å¯¹èµ„æºsystem:useræ‹¥æœ‰createã€updateã€deleteã€viewæƒé™
+#¶Ô×ÊÔ´system:userÓµÓĞcreate¡¢update¡¢delete¡¢viewÈ¨ÏŞ
 role51="system:user:create,update,delete,view"
-#å¯¹èµ„æºsystem:useræ‹¥æœ‰æ‰€æœ‰æƒé™
+#¶Ô×ÊÔ´system:userÓµÓĞËùÓĞÈ¨ÏŞ
 role52=system:user:*
-#å¯¹èµ„æºsystem:useræ‹¥æœ‰æ‰€æœ‰æƒé™
+#¶Ô×ÊÔ´system:userÓµÓĞËùÓĞÈ¨ÏŞ
 role53=system:user
 
-#å¯¹èµ„æºæ‹¥æœ‰æ‰€æœ‰æƒé™ï¼ˆå¦‚åŒ¹é…user:viewï¼‰
+#¶Ô×ÊÔ´ÓµÓĞËùÓĞÈ¨ÏŞ£¨ÈçÆ¥Åäuser:view£©
 role61=*:view
-#å¯¹èµ„æºæ‹¥æœ‰æ‰€æœ‰æƒé™ï¼ˆå¦‚åŒ¹é…system:user:viewï¼Œå³å’Œä¹‹ä¸Šçš„ä¸ç­‰ä»·ï¼‰
+#¶Ô×ÊÔ´ÓµÓĞËùÓĞÈ¨ÏŞ£¨ÈçÆ¥Åäsystem:user:view£¬¼´ºÍÖ®ÉÏµÄ²»µÈ¼Û£©
 role62=*:*:view
 
-#å¯¹èµ„æºuserçš„1å®ä¾‹æ‹¥æœ‰viewæƒé™
+#¶Ô×ÊÔ´userµÄ1ÊµÀıÓµÓĞviewÈ¨ÏŞ
 role71=user:view:1
-#å¯¹èµ„æºuserçš„1å®ä¾‹æ‹¥æœ‰updateã€deleteæƒé™
+#¶Ô×ÊÔ´userµÄ1ÊµÀıÓµÓĞupdate¡¢deleteÈ¨ÏŞ
 role72="user:update,delete:1"
-#å¯¹èµ„æºuserçš„1å®ä¾‹æ‹¥æœ‰æ‰€æœ‰æƒé™
+#¶Ô×ÊÔ´userµÄ1ÊµÀıÓµÓĞËùÓĞÈ¨ÏŞ
 role73=user:*:1
-#å¯¹èµ„æºuserçš„æ‰€æœ‰å®ä¾‹æ‹¥æœ‰authæƒé™
+#¶Ô×ÊÔ´userµÄËùÓĞÊµÀıÓµÓĞauthÈ¨ÏŞ
 role74=user:auth:*
-#å¯¹èµ„æºuserçš„æ‰€æœ‰å®ä¾‹æ‹¥æœ‰æ‰€æœ‰æƒé™
+#¶Ô×ÊÔ´userµÄËùÓĞÊµÀıÓµÓĞËùÓĞÈ¨ÏŞ
 role75=user:*:*
 
-#ç­‰ä»·äºmenu:*:*
+#µÈ¼ÛÓÚmenu:*:*
 role81=menu:*
 role82=organization
 
