--- a/myshiro/sr-ch02/src/main/resources/shiro-authenticator-all-success.ini
+++ b/myshiro/sr-ch02/src/main/resources/shiro-authenticator-all-success.ini
@@ -1,9 +1,9 @@
-锘縖main]
-#鎸囧畾securityManager鐨刟uthenticator瀹炵幇
+[main]
+#指定securityManager的authenticator实现
 authenticator=org.apache.shiro.authc.pam.ModularRealmAuthenticator
 securityManager.authenticator=$authenticator
 
-#鎸囧畾securityManager.authenticator鐨刟uthenticationStrategy
+#指定securityManager.authenticator的authenticationStrategy
 allSuccessfulStrategy=org.apache.shiro.authc.pam.AllSuccessfulStrategy
 securityManager.authenticator.authenticationStrategy=$allSuccessfulStrategy
 
