--- a/myshiro/sr-ch04/src/main/resources/shiro-config-main.ini
+++ b/myshiro/sr-ch04/src/main/resources/shiro-config-main.ini
@@ -2,7 +2,7 @@
 securityManager=org.apache.shiro.mgt.DefaultSecurityManager
 
 #authenticator
-authenticator=com.github.zhangkaitao.shiro.chapter4.authenticator.MyAuthenticator
+authenticator=cn.cc.test.shiro.authenticator.MyAuthenticator
 
 #base64 byte[]
 authenticator.bytes=aGVsbG8=
@@ -28,7 +28,7 @@ dataSource=com.alibaba.druid.pool.DruidDataSource
 dataSource.driverClassName=com.mysql.jdbc.Driver
 dataSource.url=jdbc:mysql://localhost:3306/shiro
 dataSource.username=root
-#dataSource.password=
+dataSource.password=123456
 
 jdbcRealm=org.apache.shiro.realm.jdbc.JdbcRealm
 jdbcRealm.dataSource=$dataSource
