--- a/myshiro/sr-ch04/src/main/resources/shiro-config.ini
+++ b/myshiro/sr-ch04/src/main/resources/shiro-config.ini
@@ -1,5 +1,5 @@
 [main]
-#è¦†ç›–é»˜è®¤çš„securityManager
+#¸²¸ÇÄ¬ÈÏµÄsecurityManager
 #securityManager=org.apache.shiro.mgt.DefaultSecurityManager
 
 #authenticator
@@ -19,7 +19,7 @@ dataSource=com.alibaba.druid.pool.DruidDataSource
 dataSource.driverClassName=com.mysql.jdbc.Driver
 dataSource.url=jdbc:mysql://localhost:3306/shiro
 dataSource.username=root
-#dataSource.password=
+dataSource.password=123456
 
 jdbcRealm=org.apache.shiro.realm.jdbc.JdbcRealm
 jdbcRealm.dataSource=$dataSource
