--- a/alarm/alarm-base/pom.xml
+++ b/alarm/alarm-base/pom.xml
@@ -48,6 +48,7 @@
             <artifactId>mybatis</artifactId>
             <version>${mybatis.version}</version>
         </dependency>
+        
         <dependency>
             <groupId>org.mybatis</groupId>
             <artifactId>mybatis-spring</artifactId>
@@ -74,6 +75,12 @@
             <artifactId>commons-lang3</artifactId>
             <version>${commons.lang3.version}</version>
         </dependency>
+
+		<dependency>
+		    <groupId>commons-beanutils</groupId>
+		    <artifactId>commons-beanutils</artifactId>
+		    <version>${commons.beanutils.version}</version>
+		</dependency>
 
         <dependency>
             <groupId>com.google.guava</groupId>
@@ -106,6 +113,7 @@
             <artifactId>slf4j-api</artifactId>
             <version>${slf4j.version}</version>
         </dependency>
+        
     </dependencies>
 
 </project>
