--- a/alarm/pom.xml
+++ b/alarm/pom.xml
@@ -26,6 +26,7 @@
         <mysql.version>5.1.38</mysql.version>
         <commons.lang3.version>3.4</commons.lang3.version>
         <commons.httpclient.version>4.5.2</commons.httpclient.version>
+        <commons.beanutils.version>1.9.3</commons.beanutils.version>
         <slf4j.version>1.7.24</slf4j.version>
         <logback.version>1.1.7</logback.version>
         <fastjson.version>1.2.29</fastjson.version>
