--- a/mpwb/src/main/resources/application-dev.properties
+++ b/mpwb/src/main/resources/application-dev.properties
@@ -9,3 +9,15 @@ server.port=80
 logging.config=classpath:logback-dev.xml
 
 test.url=http://localhost:80
+
+
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+spring.rabbitmq.publisher-confirms=true
+spring.rabbitmq.publisher-returns=true
+spring.rabbitmq.template.mandatory=true
+spring.rabbitmq.listener.simple.concurrency=2
+spring.rabbitmq.listener.simple.max-concurrency=2
+spring.rabbitmq.listener.simple.acknowledge-mode=MANUAL
