--- a/mpwb/src/main/resources/application.properties
+++ b/mpwb/src/main/resources/application.properties
@@ -1,7 +1,30 @@
 spring.profiles.active=dev
+
 # 所有环境通用的配置，放在这里
+server.port=80
 
 # 404 交给异常处理器处理
 spring.mvc.throw-exception-if-no-handler-found=true
 spring.resources.add-mappings=false
 spring.freemarker.checkTemplateLocation=false
+
+#db
+spring.datasource.url=jdbc:mysql://localhost:3306/test
+spring.datasource.username=root
+spring.datasource.password=123456
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+#rabbitmq
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+spring.rabbitmq.publisher-confirms=true
+spring.rabbitmq.publisher-returns=true
+spring.rabbitmq.template.mandatory=true
+spring.rabbitmq.listener.simple.concurrency=2
+spring.rabbitmq.listener.simple.max-concurrency=2
+spring.rabbitmq.listener.simple.acknowledge-mode=MANUAL
+
+#customer
+test.url=http://localhost:80
