--- a/mpwb/src/main/resources/quartz.properties
+++ b/mpwb/src/main/resources/quartz.properties
@@ -1,5 +1,21 @@
+org.quartz.scheduler.skipUpdateCheck=true
+
+# Configure Main Scheduler Properties
+#org.quartz.scheduler.instanceName: DefaultQuartzScheduler
 org.quartz.scheduler.instanceName=spring-boot-quartz-demo
 org.quartz.scheduler.instanceId=AUTO
+
+# Configure ThreadPool
+org.quartz.threadPool.class=org.quartz.simpl.SimpleThreadPool
 org.quartz.threadPool.threadCount=5
-org.quartz.jobStore.class=org.quartz.simpl.RAMJobStore
-org.quartz.scheduler.skipUpdateCheck=true
+org.quartz.threadPool.threadPriority=5
+
+# Configure JobStore
+#org.quartz.jobStore.class=org.quartz.simpl.RAMJobStore
+org.quartz.jobStore.class=org.quartz.impl.jdbcjobstore.JobStoreTX
+org.quartz.jobStore.driverDelegateClass=org.quartz.impl.jdbcjobstore.StdJDBCDelegate
+org.quartz.jobStore.useProperties=false
+#org.quartz.jobStore.dataSource=dataSource
+org.quartz.jobStore.tablePrefix=QRTZ_
+org.quartz.jobStore.isClustered=false
+org.quartz.jobStore.misfireThreshold=60000
