--- a/mpwb/src/main/resources/application.properties
+++ b/mpwb/src/main/resources/application.properties
@@ -8,6 +8,15 @@ spring.mvc.throw-exception-if-no-handler-found=true
 spring.resources.add-mappings=false
 spring.freemarker.checkTemplateLocation=false
 
+#log
+logging.level.root=DEBUG
+logging.level.org.springframework=WARN
+logging.level.org.hibernate=WARN
+logging.level.org.apache=WARN
+logging.level.org.mybatis=WARN
+logging.level.org.thymeleaf=WARN
+logging.level.org.quartz=WARN
+
 #db
 spring.datasource.url=jdbc:mysql://localhost:3306/test
 spring.datasource.username=root
@@ -28,3 +37,6 @@ spring.rabbitmq.listener.simple.acknowledge-mode=MANUAL
 
 #customer
 test.url=http://localhost:80
+
+file.upload.dir=e:\\www
+
