--- a/mpwb/src/main/resources/quartz.properties
+++ b/mpwb/src/main/resources/quartz.properties
@@ -1,4 +1,5 @@
-org.quartz.scheduler.skipUpdateCheck=true
+org.quartz.scheduler.skipUpdateCheck=false
+#org.terracotta.quartz.skipUpdateCheck=true
 
 # Configure Main Scheduler Properties
 #org.quartz.scheduler.instanceName: DefaultQuartzScheduler
