--- a/mytest/pom.xml
+++ b/mytest/pom.xml
@@ -45,12 +45,10 @@
     <dependency>
         <groupId>com.google.code.gson</groupId>
         <artifactId>gson</artifactId>
-        <version>2.8.0</version>
     </dependency>
     <dependency>  
 	    <groupId>com.fasterxml.jackson.dataformat</groupId>  
 	    <artifactId>jackson-dataformat-xml</artifactId>  
-	    <version>2.5.3</version>  
     </dependency>  
 	<dependency>  
 	    <groupId>org.codehaus.jackson</groupId>  
@@ -78,6 +76,11 @@
     </dependency>
     <dependency>
         <groupId>org.apache.commons</groupId>
+        <artifactId>commons-compress</artifactId>
+        <version>1.15</version>
+    </dependency>
+    <dependency>
+        <groupId>org.apache.commons</groupId>
         <artifactId>commons-lang3</artifactId>
         <version>3.7</version>
     </dependency>
@@ -85,10 +88,14 @@
         <groupId>commons-codec</groupId>
         <artifactId>commons-codec</artifactId>
     </dependency>
+    <dependency>
+        <groupId>commons-io</groupId>
+        <artifactId>commons-io</artifactId>
+        <version>2.6</version>
+    </dependency>
 	<dependency>
 	    <groupId>commons-beanutils</groupId>
 	    <artifactId>commons-beanutils</artifactId>
-	    <version>1.9.3</version>
 	</dependency>
 	<dependency>
         <groupId>commons-collections</groupId>
@@ -108,7 +115,6 @@
     <dependency>
         <groupId>mysql</groupId>
         <artifactId>mysql-connector-java</artifactId>
-        <version>5.1.25</version>
     </dependency>
     <dependency>
         <groupId>com.alibaba</groupId>
@@ -142,12 +148,10 @@
     <dependency>
         <groupId>ch.qos.logback</groupId>
         <artifactId>logback-classic</artifactId>
-        <version>1.1.7</version>
     </dependency>
     <dependency>
         <groupId>org.slf4j</groupId>
         <artifactId>slf4j-api</artifactId>
-        <version>1.7.24</version>
     </dependency>
     
     <!-- cache -->
@@ -161,7 +165,6 @@
     <dependency>
         <groupId>redis.clients</groupId>
         <artifactId>jedis</artifactId>
-        <version>2.9.0</version>
     </dependency> 
     
   </dependencies>
