--- a/mytest/pom.xml
+++ b/mytest/pom.xml
@@ -38,7 +38,7 @@
     <dependency>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-test</artifactId>
-        <scope>test</scope>
+        <!--<scope>test</scope>-->
     </dependency>
     
     <!-- json -->
@@ -175,7 +175,6 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
-            
 		</plugins>
 	</build>
 </project>
