--- a/mystudy/Thinking-in-Java/pom.xml
+++ b/mystudy/Thinking-in-Java/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>effective-java-exaamples</artifactId>
+    <artifactId>Thinking-in-Java</artifactId>
 
 
 </project>
