--- a/mystudy/Effective-Java/pom.xml
+++ b/mystudy/Effective-Java/pom.xml
@@ -11,5 +11,9 @@
 
     <artifactId>Effective-Java</artifactId>
 
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <java.version>1.8</java.version>
+    </properties>
 
 </project>
