--- a/mystudy/Thinking-in-Java/pom.xml
+++ b/mystudy/Thinking-in-Java/pom.xml
@@ -11,5 +11,10 @@
 
     <artifactId>Thinking-in-Java</artifactId>
 
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <java.version>1.8</java.version>
+    </properties>
+
 
 </project>
